loopfile,datefile add

--- a/week2/loop.html
+++ b/week2/loop.html
@@ -54,6 +54,15 @@
         for (let x of a) {
             document.write(x + " <br>");
         }
+       //The forEach() method calls a function for each element in an array.
+       
+        const ab=[1,2,3,4,5];
+        let sum=0;
+        ab.forEach(myfunction);
+        function myfunction(value,index){
+            console.log("index is:"+index+"value is:"+value);
+        
+        }
         // function Car(model) {
         //     this.model = model;
         //     gear = 1;
