--- a/assignment2/5.html
+++ b/assignment2/5.html
@@ -21,7 +21,7 @@
             console.log(str);
             console.log(number);
            let array = str.split('');
-            let c = str.charAt(number);
+            let c = str.charAt(number-1);
            
             if(c =='a'|| c=='e' || c=='i' ||c== 'o' ||c== 'u')
             {
