--- a/week7/myreactapp2/public/index.html
+++ b/week7/myreactapp2/public/index.html
@@ -22,6 +22,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="1"></div>
     <div id="2"></div>
+    <div id="3"></div>
+    <div id="4"></div>
     
     
   </body>
