--- a/assignment2/1.html
+++ b/assignment2/1.html
@@ -11,17 +11,17 @@
 <body>
     <input type="text" id="1">
     <button type="submit" onclick="myfun()">submit</button>
-        <script>
-            function myfun() {
-                let str = document.getElementById('1').value;
-                let arr = str.split('');
-                let str1 ='';
-                for (let i = arr.length-1; i >= 0; i--) {
-                    str1 = str1 + arr[i];
-                }
-                console.log(str1);
+    <script>
+        function myfun() {
+            let str = document.getElementById('1').value;
+            let arr = str.split('');
+            let str1 = '';
+            for (let i = arr.length - 1; i >= 0; i--) {
+                str1 = str1 + arr[i];
             }
-        </script>
+            console.log(str1);
+        }
+    </script>
 </body>
 
 </html>
