--- a/assignment2/3.html
+++ b/assignment2/3.html
@@ -24,7 +24,7 @@
   }
   
  let array = tempStr.filter(common);
- console.log(duplicate);
+ //console.log(duplicate);
 
  
   let max = 0,maxchar="";
@@ -49,7 +49,7 @@
 myfun();
 
         
-    </script>
+</script>
 </body>
 
 </html>
